# ml-bazel-rules

./: .bazelrc  .clang-format  .gitignore  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  renovate.json
scripts/: BUILD  check_and_copy.sh
src/bow/: BUILD  defs.bzl  extract_words.cc  extract_words.h  main.cc  tokens.cc  tokens.h
src/sampler/: BUILD  main.cc  path_matcher.cc  path_matcher.h
src/text/: BUILD  extractor.cc
src/tokens/: BUILD  bagger.h
test/rules/: BUILD  sample.cc
test/sampler/: BUILD  path_matcher.test.cc
test/sampler/data/include/: 30.sample
test/tokens/: BUILD  bagger.test.cc  combine.test.cc  tokens.test.cc  word_extractor.test.cc
tokens/: BUILD  bagger.cc  main.cc  tokens.cc  tokens.h
uchenml/: BUILD  archives.bzl  bow.bzl  datasets.bzl  defs.bzl  images.bzl  providers.bzl  sample.bzl  text.bzl  utils.bzl
uchenml/bow/: bow_impl.bzl
uchenml/dataset/: archives.bzl  sample.bzl
