'''
Uchen.ML Tools - Tools to make training models easier
'''
module(name = "uchen-core", version = "0.1", compatibility_level = 1)

bazel_dep(name = "abseil-cpp", version = "20240722.0")

bazel_dep(name = "googletest", version = "1.14.0")
git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    commit = "0953a17a4281fc26831da647ad3fcd5e21e6473b",
)

# Dev dependencies
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "0ae99b7adb025b251962942f6e8a698a5539888b",
)
